force-app/main/default/objects/jobs__c/jobs__c.object-meta.xml
<CustomObject>
    <label>jobs</label>
    <nameField>
        <label>jobs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>