force-app/main/default/objects/jobs__c/fields/datePosted__c.field-meta.xml
<CustomField>
    <fullName>datePosted__c</fullName>
    <label>datePosted</label>
    <type>Date</type>
</CustomField>