force-app/main/default/objects/jobs__c/fields/employer__c.field-meta.xml
<CustomField>
    <fullName>employer__c</fullName>
    <label>employer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>