force-app/main/default/objects/jobs__c/fields/fileURL__c.field-meta.xml
<CustomField>
    <fullName>fileURL__c</fullName>
    <label>fileURL</label>
    <type>Url</type>
</CustomField>